# libupnpp-bindings

./: .gitignore  Makefile.am  configure.ac  tryit.py  upcppy.i  upnpp-devs.i  upnpp-head.i  upnpp.i
archlinux/: PKGBUILD
debian/: changelog  control  copyright  python-libupnpp.install  python3-libupnpp.install  rules  watch
doc/: Makefile  makefile  upnpp-python.txt
m4/: m4_ax_swig_multi_module_support.m4
python/: Makefile.am  upnpp-python.i  upnpp_wrap.cxx
samples/: 2tracks.py  cooked.py  events.py  getmedinfo.py  getsearchcaps.py  listdevs.py  ohcreds.py  ohinfo.py  openhome.py  reporter.py  samplecommon.py  setRadioPlaying.py  tryit.py
samples/webcp/: 00README.asc  00README.html  webcp-run.py  webcp.py  webcp.service  webremote.py
